# lesspass-client

./: .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs  main.rs
src/lib/: client.rs  error.rs  mod.rs  model.rs
tests/: client.rs
