[package]
name = "lesspass-client"
version = "0.2.0"
authors = ["Óscar García Amor <ogarcia@connectical.com>"]
edition = "2021"
description = "LessPass server API client library and CLI written in Rust"
readme = "README.md"
repository = "https://github.com/ogarcia/lesspass-client"
license = "GPL-3.0-only"
keywords = ["lesspass", "rockpass", "password", "client", "cli"]
categories = ["command-line-utilities", "web-programming::http-client"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "lesspass-client"
path = "src/main.rs"
required-features = ["default"]

[dependencies]
chrono = { version="~0.4", features = ["serde"] }
log = "~0.4"
reqwest = { version = "~0.11", features = ["json"] }
serde = { version = "~1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

clap = { version = "~4.0", features = ["cargo", "env"], optional = true }
env_logger = { version = "~0.10", optional = true }
xdg = { version = "~2.4", optional = true }

[dev-dependencies]
mockito = "~0.31"

[features]
default = ["clap", "env_logger", "xdg"]
